# warden

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  LICENSE  MVP_STATUS.md  README.md  UPGRADE_ADK.md  skrymir_ctl.sh  warden-report.json  warden_memory.db
docs/: VERSIONING.md
docs/plans/: 2026-03-04-warden-implementation.md
installers/: README.md  RELEASE_STATUS.md  build-release-binaries.sh  check-updates.sh  install-linux.sh  install-local.sh  install-windows.ps1  release.sh  warden.rb
src/: agent_config.rs  agent_models.rs  agent_reporter.rs  agent_server.rs  analytics.rs  cache.rs  churn_reporter.rs  git_parser.rs  lib.rs  main.rs  metrics.rs  models.rs  prediction.rs  predictor.rs  risk_scorer.rs  ui.rs
tests/: integration_tests.rs  test_models.rs
warden_agent/: .env.example  __init__.py  agent.py  cerebro_bridge.py  llm_client.py  main.py  memory.py  requirements.txt  settings.py  tools.py
