[package]
name = "warden"
version = "0.4.0"
edition = "2024"
authors = ["Sergio Guadarrama <sergio@example.com>"]
description = "Historical code quality analysis and predictive architecture insights"
license = "MIT"
repository = "https://github.com/sergiogswv/warden"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
dialoguer = "0.11"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
